# Convertidor-Facturas

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
data/: ground_truth.json
scripts/: verify.py
src/core/: processor.py  watcher.py
src/gui/: app.py
src/parsers/: auto_detector.py
src/utils/: cleaner.py  excel_writer.py
